<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.yoji.appbarinapplication.MainActivity">
    <item
        android:id="@+id/health_monitoring_system_app"
        android:icon="@drawable/health_monitoring_system_logo"
        android:orderInCategory="100"
        android:title="@string/complex_health_monitoring_system_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/notebook_app"
        android:icon="@drawable/notebook_logo"
        android:orderInCategory="100"
        android:title="@string/notebook_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/splash_screen_app"
        android:icon="@drawable/android_mashnin_splash_screen_logo"
        android:orderInCategory="100"
        android:title="@string/splash_screen_title"
        app:showAsAction="never"/>
    <item
        android:id="@+id/universal_input_form_app"
        android:icon="@drawable/universal_input_form_logo"
        android:orderInCategory="100"
        android:title="@string/universal_input_form_title"
        app:showAsAction="never"/>
    <item
        android:id="@+id/infinite_activity_loop_app"
        android:icon="@drawable/infinite_activity_loop_logo"
        android:orderInCategory="100"
        android:title="@string/infinite_activity_loop_title"
        app:showAsAction="never"/>
    <item
        android:id="@+id/radiobutton_by_checkboxes_app"
        android:icon="@drawable/radiobutton_by_checkboxes_logo"
        android:orderInCategory="100"
        android:title="@string/radio_button_by_checkboxes_title"
        app:showAsAction="never"/>
    <item
        android:id="@+id/countries_cities_streets_app"
        android:icon="@drawable/countries_cities_streets_logo"
        android:orderInCategory="100"
        android:title="@string/countries_cities_streets_title"
        app:showAsAction="never"/>
    <item
        android:id="@+id/task_time_limits_app"
        android:icon="@drawable/task_time_limits_logo"
        android:orderInCategory="100"
        android:title="@string/task_time_limits_title"
        app:showAsAction="never"/>
    <item
        android:id="@+id/main_screen_app"
        android:icon="@drawable/list_with_custom_elements_logo"
        android:orderInCategory="100"
        android:title="@string/app_name"
        app:showAsAction="ifRoom"/>
</menu>