<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/previousButtonID"
        style="@style/TextAppearance.AppCompat.Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/progress_horizontal"
        android:backgroundTint="@android:color/holo_purple"
        android:stateListAnimator="@android:anim/slide_in_left"
        android:text="@string/previous"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/nextButtonID"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photosImageViewID" />

    <Button
        android:id="@+id/nextButtonID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:background="@android:drawable/progress_horizontal"
        android:backgroundTint="@android:color/holo_purple"
        android:stateListAnimator="@android:anim/slide_out_right"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photosImageViewID" />

    <ImageView
        android:id="@+id/photosImageViewID"
        android:layout_width="382dp"
        android:layout_height="230dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/photo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/infinite_activity_loop_logo"
        tools:layout_editor_absoluteY="48dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/messageTextViewID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photosImageViewID" />
</androidx.constraintlayout.widget.ConstraintLayout>